// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`events e2e GET /events/:eventId facebook event fields 1`] = `
Object {
  "__v": 0,
  "artists": Array [],
  "createdAt": Any<String>,
  "dates": Array [
    Object {
      "artists": Array [],
      "from": "2019-12-11T11:16:14.157Z",
      "id": "5d19f6824697baeac21cbee1",
      "to": "2019-09-12T11:16:14.157Z",
    },
  ],
  "facebook": Object {
    "description": "Description",
    "id": "12345678",
    "title": "Title",
  },
  "id": Any<String>,
  "images": Array [],
  "location": Object {
    "address1": "Vechtplantsoen 56",
    "address2": "1",
    "city": "Utrecht",
    "coordinates": Object {
      "latitude": 52.118273,
      "longitude": 5.085487,
    },
    "country": "NL",
    "postalCode": "3554TG",
    "type": "venue",
  },
  "pageSlug": "nl/utrecht",
  "tags": Array [],
  "tickets": Object {
    "products": Array [],
  },
  "updatedAt": Any<String>,
}
`;

exports[`events e2e GET /events/:eventId happy path 1`] = `
Object {
  "__v": 0,
  "artists": Array [],
  "createdAt": Any<String>,
  "dates": Array [
    Object {
      "artists": Array [],
      "from": "2019-12-11T11:16:14.157Z",
      "id": "5d2861d4314defa5a500e11c",
      "to": "2019-09-12T11:16:14.157Z",
    },
  ],
  "id": Any<String>,
  "images": Array [],
  "location": Object {
    "address1": "Vechtplantsoen 56",
    "address2": "1",
    "city": "Utrecht",
    "coordinates": Object {
      "latitude": 52.118273,
      "longitude": 5.085487,
    },
    "country": "NL",
    "postalCode": "3554TG",
    "type": "address",
  },
  "pageSlug": "nl/utrecht",
  "tags": Array [],
  "tickets": Object {
    "products": Array [],
  },
  "title": "Bevrijdingsfestival",
  "updatedAt": Any<String>,
}
`;

exports[`events e2e GET /events/:eventId simple fields 1`] = `
Object {
  "__v": 0,
  "admin": Object {
    "hide": true,
  },
  "artists": Array [],
  "createdAt": Any<String>,
  "dates": Array [
    Object {
      "artists": Array [],
      "from": "2019-12-11T11:16:14.157Z",
      "id": "5d2861d4314defa5a500e11c",
      "interestedCount": 0,
      "providerEventId": "1234",
      "ticketsUrl": "http://foo.bar",
      "to": "2019-09-12T11:16:14.157Z",
    },
  ],
  "description": Object {
    "en": "Simple description",
  },
  "id": Any<String>,
  "images": Array [],
  "location": Object {
    "address1": "Vechtplantsoen 56",
    "address2": "1",
    "city": "Utrecht",
    "coordinates": Object {
      "latitude": 52.118273,
      "longitude": 5.085487,
    },
    "country": "NL",
    "postalCode": "3554TG",
    "type": "address",
  },
  "pageSlug": "nl/utrecht",
  "tags": Array [],
  "tickets": Object {
    "checkoutUrl": "https://nightguide.app",
    "displayPrice": 10.5,
    "products": Array [],
    "provider": "eventix",
    "providerData": Object {
      "shopId": "foo",
    },
  },
  "updatedAt": Any<String>,
  "videoUrl": "https://www.youtube.com/watch?v=dTYOkcRH220",
}
`;

exports[`events e2e GET /events/:eventId ticket products field 1`] = `
Object {
  "id": Any<String>,
  "name": "Test ticket",
  "price": 10.12,
}
`;

exports[`events e2e GET /events/:fbEventId happy path 1`] = `
Object {
  "__v": 0,
  "artists": Array [],
  "createdAt": Any<String>,
  "dates": Array [
    Object {
      "artists": Array [],
      "from": "2019-12-11T11:16:14.157Z",
      "id": "5d19f6824697baeac21cbee1",
      "to": "2019-09-12T11:16:14.157Z",
    },
  ],
  "facebook": Object {
    "id": "12345678",
  },
  "id": Any<String>,
  "images": Array [],
  "location": Object {
    "address1": "Vechtplantsoen 56",
    "address2": "1",
    "city": "Utrecht",
    "coordinates": Object {
      "latitude": 52.118273,
      "longitude": 5.085487,
    },
    "country": "NL",
    "postalCode": "3554TG",
    "type": "venue",
  },
  "organiser": Object {
    "venue": null,
  },
  "pageSlug": "nl/utrecht",
  "tags": Array [],
  "tickets": Object {
    "products": Array [],
  },
  "updatedAt": Any<String>,
}
`;

exports[`events e2e POST /events populates venue location data 1`] = `
Object {
  "address1": "Vechtplantsoen 56",
  "city": "Utrecht",
  "coordinates": Object {
    "latitude": 52.118273,
    "longitude": 5.085487,
  },
  "country": "NL",
  "postalCode": "3554TG",
  "type": "venue",
}
`;
